--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
   - Input Data: data_inputs.md
   - Outputs: outputs.md
   - City Solar Radiation Modeling: solar_radiation.md
+  - Building Energy Modeling: building_energy_modeling.md
   - Rooftop PV Model: pv_model.md
   - Microclimate Co-Simulation: microclimate.md
   - Test Cases:
@@ -51,3 +52,4 @@ markdown_extensions:
 
 extra_javascript:
   - javascripts/mathjax.js
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
