feat(docs): Revise and standardize Data Input Documentation (data_inputs.md)
Major overhaul of input documentation (data_inputs.md):
- Standardized all image/figure structures (<figure markdown>).
- Replaced all visual emojis with consistent code-based Material icons in headers.
- Corrected the primary purpose of Slab/External Wall Archetypes to focus on **Embodied Emissions** (now flagged as developmental).
- Improved the **Pre-Simulation Checklist** structure and finalized the **Next Steps** CTA linking to /examples/.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,8 +33,7 @@ nav:
   - Building Energy Modeling: building_energy_modeling.md
   - Rooftop PV Model: pv_model.md
   - Microclimate Co-Simulation: microclimate.md
-  - Test Cases:
-      - Rooftop PV Montreal Case: examples/rooftoppv_montreal.md
+  - Test Cases: examples.md
   - Publications: publications.md
   - About Us: about.md
   - Contact: contact.md
