--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,9 +29,8 @@ nav:
   - Run CityBEM: run_citybem.md
   - Input Data: data_inputs.md
   - Outputs: outputs.md
-  - City Solar Radiation Modeling: solar_radiation.md
   - Building Energy Modeling: building_energy_modeling.md
-  - Rooftop PV Model: pv_model.md
+  - Rooftop PV Modeling: pv_model.md
   - Microclimate Co-Simulation: microclimate.md
   - Test Cases: examples.md
   - Publications: publications.md
